--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/dahal/TwitterArticle/issues"
   },
-  "homepage": "https://github.com/dahal/TwitterArticle"
+  "homepage": "https://github.com/dahal/TwitterArticle",
+  "dependencies": {
+    "express": "^4.9.7",
+    "mongoose": "^3.8.17"
+  }
 }
