--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/dahal/TwitterArticle",
   "dependencies": {
-    "express": "^4.9.7",
-    "mongoose": "^3.8.17"
+    "express": "^4.9.7"
   }
 }
