--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dahal/TwitterArticle",
   "dependencies": {
-    "express": "^4.9.7"
+    "express": "^4.9.7",
+    "nodemon": "^1.2.1"
   }
 }
